2008-08-21  Jari Aalto  <jari.aalto@cante.net>

	General: Everything in the documentation dorectories havd
	been rearranged. Now each file is in its own directory.

	* html/install/index.txt
	(1.4 Quick install -- site wide): Correct heading position.

2006-01-23 Mon  Jari Aalto  <jari dot aalto A T cante dot net>

        * txt/emacs-elisp.txt (5.1 Win32 Emacs ports): Removed obsolete
        mailing list address and hyperachive.
        (1.1 Important Emacs links): Spell mistakes fixed. Thanks to
        Giorgos Keramidas <keramida A T ceid upatras gr>
        (2.0 GNU Emacs): Removed separate CVS bullet and added it next to
        savannah.
        (5.2.2 CVS access): Removed XEmacs instructions. Already mentioned
        at the beginning of heading XEmacs.
        (5.2.3 Tips for debugging): This one line comment is too alone. Moved
        it to the beginning.
        (5.3 Emacs or Unix-like Win32 programs): Removed. Cygwin is now
        the ultimate platform. For those interested, there was link to
        http://www.notgnu.org/ and http://space.mit.edu/~davis/jed.html
        (5.3.1 NT print): Removed URL
        ftp://paddington.ic.uva.nl/public/print-NT.zip Not needed. Emacs
        21+ is available to Windows. Removed Non-existing link
        <http://www.tertius.com/projects/library/>. Removed 20.x
        information. (NT print and Gnu enscript): Merged to "NT printing".
        (5.4 Cygwin): 2.94 Removed Mailing List information. They are
        available at the Cygwin homepage.
        (5.5 Win32 terminal programs): 2.94 Removed Tera Term
        <http://www.zip.com.au/~roca/ttssh.html> which doe snot speak
        SSH2. Cygwin contains all the tools needed. Removed Hwtn (no ssh
        support) <ftp://ftp.helsinki.fi/windows/hwt/>. Removed CRT, which
        have become commercial product: http://www.vandyke.com/
        (7.1 Compiling lisp files): 2.94 Removed 20.x text.
        (2.2 Other Lisp related documents and resources): 2.94 Common Lisp