@@ -15,7 +15,7 @@ Emacs Tiny Tools Project README
 	content="">
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Expires" content="Thu,  9 Oct 2008 09:03:08 GMT">
+  <meta http-equiv="Expires" content="Mon, 20 Oct 2008 23:44:28 GMT">
 
 
 
@@ -876,7 +876,7 @@ Emacs Tiny Tools Project README
 
 <p class="column8">
         Windows platform: create directories manually e.g. on
-        <samp class="word">C:\home\elisp</samp> and use some suitable archiver program. Aa
+        <samp class="word">C:\home\elisp</samp> and use some suitable archiver program. An
         <a href="http://support.microsoft.com/kb/310519">environment variable</a>
         HOME must alse be defined to point to <samp class="word">C:\home</samp>.
 
@@ -970,18 +970,22 @@ Emacs Tiny Tools Project README
     <td class="shade-normal-attrib" valign="top">
     <pre>
       (load &quot;utility&quot;)
-      (utility-install)   ;; or whatever is needed to activate it
-
-
-  &lt;a name=&quot;quick_install_site_wide&quot; id=&quot;quick_install_site_wide&quot;&gt;</a>
-  &lt;h2&gt;
-      1.4 Quick install &ndash; site wide
-
-  &lt;/h2&gt;    </pre></td>
+      (utility-install)   ;; or whatever is needed to activate it    </pre></td>
     </tr>
 </table>
 
 
+
+  <a name="quick_install_site_wide" id="quick_install_site_wide"></a>
+  <h2>
+      1.4 Quick install &ndash; site wide
+
+  </h2>
+
+
+
+
+<p>
 <p class="column8">
         If you are administering the current host and you have both
         XEmacs and Emacs installations; plus you have lot of extra
@@ -1434,7 +1438,7 @@ Emacs Tiny Tools Project README
 This file has been automatically generated from plain text file
 with
 <br>
-Last updated: 2008-08-10 12:03<br>
+Last updated: 2008-08-22 02:44<br>
 </em    class="footer">
 </body>
 </html>
