@@ -36,8 +36,8 @@ Licensing information
         this dual licence form *or* select the other license (GNU GPL,
         GNU FDL) and remove the unwanted one. In case of removal, a
         notice "License <license name> removed <date ISO 8601> by
-        <Firstname Lastname>" must be mentioned somewhere in the
-        distributed files; that notice is allowed to be outside of the
+        <Firstname Lastname>" is best to be mentioned somewhere in the
+        distributed files; that notice can also be outside of the
         original files.
 
             Copyright (C) 1995-2007 Jari Aalto
